# netdemo

./: LICENSE  README.md  build.sh  build_all.bat  build_clean.bat  build_clean.sh
client/: CMakeLists.txt  netdemo_client.cpp  netdemo_client.h
libext/cmake/: FindOpenSSL.cmake
libext/source/bcrypt/: CMakeLists.txt
libext/source/bcrypt/src/: bcrypt_class.cpp
libext/win64/: bcrypt.lib  bcryptd.lib
ndclient/: CMakeLists.txt  netdemo_client.cpp  netdemo_client.h
ndclient/assets/: server.pem
ndserver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  netdemo_server.cpp  netdemo_server.h
ndserver/assets/: server.key
server/: CMakeLists.txt  netdemo_server.h
